@@ -1,10 +1,9 @@
   ***   Warning: new stack size = 20000000 (19.073 Mbytes).
 1
-x^3 + (-309809053782*y^3 - 3888997223751*y^2 - 6797301518349*y - 84052574654
-07)*x + (2110598365387467792592554352717526002539781865920923249*y^3 + 21641
-216011110540424109369276995877123124719593450117617*y^2 - 112415300673959930
-84134917692441162658808857634880256897*y - 756749747169262373129861936919845
-290814942520335331064)
+x^3 + (76444126945687692063*y^3 + 95851038938815977768*y^2 + 116634231131091
+141384*y - 106704642703262169792)*x + (6952769785407333647049967168852088370
+36*y^3 + 1295719319620829728106935660641332757336*y^2 - 63164151046984158739
+666320128496887188752*y + 34408889837655961514790658273160305237139)
 2
 x^3 + (-455492756088*y^3 + 72746635392*y^2 + 30103312785*y - 532729124469)*x
  + (-4059137465271111971*y^3 + 652777677080133659*y^2 + 262952422699146889*y
@@ -88,8 +87,8 @@ x^2 + (8*y - 109)
 x^2 + (485/684*y^7 + 65/76*y^6 - 3010/57*y^5 - 1220/19*y^4 + 11125/12*y^3 + 
 4555/4*y^2 - 23555/9*y - 3360)
 18
-x^3 + (-141*y^3 + 606*y^2 + 3507*y - 28437)*x + (-2491925/2*y^3 + 7854942*y^
-2 + 11241975/2*y - 165098584)
+x^3 + (-141*y^3 + 606*y^2 + 3507*y - 28437)*x + (2491925/2*y^3 - 7854942*y^2
+ - 11241975/2*y + 165098584)
 19
 [x^3 - 3*x - 1]
 20
@@ -100,4 +99,4 @@ x^5 - 10*x^3 + 5*x^2 + 10*x + 1
 x^2 + (3158/5*y^3 + 1123*y^2 - 185813/5*y - 66076)
 x^2 + (-200*y^2 + 380*y - 265)
 x^2 + (-429*y^2 - 312*y - 624)
-Total time spent: 7672
+Total time spent: 7648
